# Ares-GO

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.cache/: 1160533640426872316.cl_cache  1194434941442545282.cl_cache  1482908687389068008.cl_cache  1560476306626838434.cl_cache  1901456874883982414.cl_cache  2250388152008149836.cl_cache  2633495665696221944.cl_cache  2739831573240874737.cl_cache  2939947070071098656.cl_cache  3024295077600001042.cl_cache  3040054609742679111.cl_cache  3091716596496197002.cl_cache  3210768609555801924.cl_cache  337016559213305549.cl_cache  3506371498014830896.cl_cache  3644390590180788683.cl_cache  3962612253175243852.cl_cache  4004107669697992993.cl_cache  4120356599404488324.cl_cache  4267192168764127529.cl_cache  4633427122172786106.cl_cache  4728795665635764202.cl_cache  4815824290216978048.cl_cache  4888799307661006126.cl_cache  490601093724586739.cl_cache  5159510700921844668.cl_cache  5524380977585905007.cl_cache  5857290409739992726.cl_cache  6030804994032839720.cl_cache  6111091704255522353.cl_cache  6169113582538863253.cl_cache  6485733230383264654.cl_cache  6577388616919735086.cl_cache  6832583094072803253.cl_cache  6838767470270514649.cl_cache  6857195897491197389.cl_cache  7030982245238321608.cl_cache  7044668033146834196.cl_cache  7235975517732092005.cl_cache  7265131230001423992.cl_cache  (+20 more)
camera/: CMakeLists.txt
camera/include/: camera.h  camera_api.h
camera/src/: camera.cpp  camera_api.cpp
detector/: CMakeLists.txt
detector/include/: PNPSolver.hpp  anglesolver.hpp  armor.hpp  armor_detect.h  classifier.hpp  detector.hpp  inference.h  ovinference.h  predictor.hpp
detector/model/: opt-1208-001.xml  rm-net16.xml  yolox.mapping  yolox.xml  yolox16.mapping  yolox16.xml
detector/src/: armor_detect.cpp  detector.cpp  inference.cpp  ovinference.cpp
include/: Message.hpp  Record.hpp  Tictoc.hpp  anglesolver.hpp  data_type.h  debug.h
params/: daheng159.yaml  ost.yaml  params.yaml
predictor/: CMakeLists.txt
predictor/include/: AdaptiveEKF.hpp  EKFpredictor.h  kalmanFilter.hpp  predictor.h
predictor/src/: EKFpredictor.cpp  predictor.cpp
scripts/: app.py
scripts/templates/: index.html
serial/: CMakeLists.txt  serial.cpp  serial.h
wit-motion/: CMakeLists.txt  imu_receive.cpp  imu_receive.h
